# sims4-updater

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Sims4Updater.spec  Sims4Updater_debug.spec  build.bat  pyproject.toml  requirements-dev.txt  requirements.txt  sims4_updater.spec  test_unlocker_edge.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dlc_request.yml  feature_request.yml  greenluma_issue.yml  question.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml
Documentation/: Architecture_and_Developer_Guide.md  CDN_Infrastructure.md  DLC_Management_System.md  DLC_Packer_and_Distribution.md  GreenLuma_Integration.md  Supabase_Setup_Guide.md  Update_and_Patching_System.md  User_Guide.md
cloudflare-worker/: SETUP.md  api-worker.js  cdn_archive.py  cdn_config.example.json  cdn_lang_upload.py  cdn_manager.spec  cdn_manifest_fix.py  cdn_pack_upload.py  cdn_upload.py  manifest.json  supabase_setup.sql  worker.js  wrangler-api.toml  wrangler.toml
cloudflare-worker/cdn_manager/: __main__.py  animations.py  app.py  components.py  config.py  theme.py
cloudflare-worker/cdn_manager/backend/: archive_ops.py  connection.py  depot_ops.py  dlc_ops.py  lang_ops.py  manifest_ops.py  patch_ops.py  steamdb.py
cloudflare-worker/cdn_manager/data/: sims4_depot_manifests.json
cloudflare-worker/cdn_manager/frames/: archive_frame.py  dashboard_frame.py  depot_frame.py  dlc_frame.py  kv_frame.py  language_frame.py  manifest_frame.py  patch_frame.py  settings_frame.py
data/: dlc_catalog.json  version_hashes.json
docs/: index.html
src/sims4_updater/: __init__.py  __main__.py  config.py  constants.py  updater.py
src/sims4_updater/core/: backup.py  cache.py  cdn_auth.py  contribute.py  diagnostics.py  exceptions.py  files.py  identity.py  learned_hashes.py  machine_id.py  myzipfile.py  process.py  rate_limiter.py  self_update.py  subprocess_.py  telemetry.py  unlocker.py  validator.py  version_detect.py
supabase/migrations/: 20260223_step4_bans.sql  20260224_cdn_settings.sql  20260225_token_log.sql  20260226_analytics_views.sql  20260227_stats_rpc.sql  20260228_performance_indexes.sql  20260301_fix_rpc_date_bounds.sql  20260302_fix_feature_usage_key.sql  20260303_download_telemetry_views.sql
tests/: conftest.py  test_applist.py  test_backup.py  test_catalog.py  test_cdn_auth.py  test_config.py  test_config_vdf.py  test_contribute.py  test_diagnostics.py  test_downloader.py  test_files.py  test_formats.py  test_identity.py  test_language.py  test_lua_parser.py  test_machine_id.py  test_manifest.py  test_planner.py  test_rate_limiter.py  test_self_update.py  test_telemetry.py  test_validator.py  test_version_compare.py  test_version_detect.py
tools/DLC Unlocker for Windows/: entitlements.ini
(+42 files in other folders)
