[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sims4-updater"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.0",
    "requests>=2.31.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.11",
]

[project.scripts]
sims4-updater = "sims4_updater.__main__:main"
patch-maker = "patch_maker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sims4_updater", "src/patch_maker"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
