[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sims4-updater"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.0",
    "requests>=2.31.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.11",
]
cdn = [
    "paramiko>=3.0",
    "bcrypt>=4.0",
    "cryptography>=41.0",
    "pynacl>=1.5",
]

[project.scripts]
sims4-updater = "sims4_updater.__main__:main"

[tool.hatch.version]
path = "src/sims4_updater/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sims4_updater"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
