[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sims4-updater"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "customtkinter @ git+https://github.com/ToastyToast25/CustomTkinter.git@v5.4.0",
    "requests>=2.33.1",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15.0",
    "pyinstaller>=6.19",
]
cdn = [
    "paramiko>=4.0",
    "bcrypt>=5.0",
    "cryptography>=44.0",
    "pynacl>=1.6",
]

[project.scripts]
sims4-updater = "sims4_updater.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/sims4_updater/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sims4_updater"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
